@@ -8,7 +8,7 @@
   <tr align="center" bgcolor="#e4e4e4">
     <td>
       <h1><big><font color="#3c34ec"><i>NuttX RTOS</i></font></big></h1>
-      <p>Last Updated: March 10, 2008</p>
+      <p>Last Updated: March 15, 2008</p>
     </td>
   </tr>
 </table>
@@ -608,6 +608,27 @@
 <tr>
   <td valign="top"><img src="favicon.ico"></td>
   <td bgcolor="#5eaee1">
+    <b>Zilog eZ80Acclaim!</b>
+  </td>
+</tr>
+<tr>
+  <td><br></td>
+  <td>
+    <p>
+      <b>Zilog eZ80Acclaim! Microncontroller</b>.
+      This port uses the ZiLOG ez80f0910200kitg development kit, eZ80F091 part
+      and the Zilog ZDS-II Windows command line tools.
+      The development environment is Cygwin under WinXP.
+    </p>
+    <p>
+      <b>STATUS:</b>
+      This is a work in progress.  Verified ez80 support will be announced in a future NuttX release.
+    </p>
+   </td>
+</tr>
+<tr>
+  <td valign="top"><img src="favicon.ico"></td>
+  <td bgcolor="#5eaee1">
     <b>Zilog Z8Encore!</b>
   </td>
 </tr>
@@ -628,7 +649,8 @@
     </p>
     <p>
       <b>STATUS:</b>
-      This released has been verified only on the ZiLOG ZDS-II Z8Encore! chip simulation.
+      This release has been verified only on the ZiLOG ZDS-II Z8Encore! chip simulation
+      as of nuttx-0.3.9.
     </p>
    </td>
 </tr>
@@ -988,6 +1010,7 @@ nuttx-0.3.10 2008-xx-xx Gregory Nutt &lt;spudmonkey@racsa.co.cr&gt;
 
 	* Add support for the ZiLOG EZ80Acclaim microcontrooler (EZ80F91 chip).
 	* Add configuration for the ZiLOG z8f64200100kit development kit, Z8F6423 part.
+	* Add configuration for the ZiLOG ez80f0910200kitg development kit, EZ80F091 part.
 
 pascal-0.1.3 2008-xx-xx Gregory Nutt &lt;spudmonkey@racsa.co.cr&gt;
 
